[package]
name = "trancer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "collector"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
rusqlite = "0.36.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.8.5"
