[package]
name = "trancer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "collector", "cache", "model"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
rusqlite = "0.36.0"
log = "0.4.27"
once_cell = "1.21.3"
rand = "0.8.5"
chrono = "0.4.41"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
chrono-humanize = "0.2.3"
sled = "0.34.7"
